--- a/dev/main/blocks/about/_about.sass
+++ b/dev/main/blocks/about/_about.sass
@@ -94,3 +94,12 @@
 		font-family: $fontTitle
 		+fontEm(46px)
 		margin-bottom: 0.15em
+#advantage1
+	animation-duration: 1s
+	animation-delay: 2s
+#advantage2
+	animation-duration: 1s
+	animation-delay: 1s
+#advantage3
+	animation-duration: 1s
+	//animation-delay: 3s
