--- a/dev/main/blocks/form/_form.sass
+++ b/dev/main/blocks/form/_form.sass
@@ -1,5 +1,6 @@
 .contactBlock
 	+paddingRem(120px, 0, 130px, 0)
+	position: relative
 	background-color: #f0f0f0
 	background-image: url(../../static/img/general/map-1920w.png)
 	background-position: center
@@ -46,6 +47,54 @@
 		min-width: 147px
 		margin-left: $offset_one_side
 		border: 1px solid $borderColor
+.callback
+	&__wrap
+		height: 100vh
+		position: fixed
+		top: 0
+		left: 0
+		right: 0
+		background: rgba(0, 0, 0, .3)
+		display: none
+	&__icon
+		display: inline-block
+		width: 2em
+		height: 2em
+		&_color
+			&_succsess
+				fill: #5cb85c
+			&_error
+				fill: #d9534f
+	&__item
+		width: 287px
+		box-sizing: border-box
+		padding: 1rem
+		position: absolute
+		top: 50%
+		left: 50%
+		transform: translate(-50%, -50%)
+		font-family: $fontTitle
+		+fontRem(20px)
+		background-color: $textColorLight
+		text-align: center
+		&_success
+			border: 1px solid $mainColor
+		&_error
+			border: 1px solid #d9534f
+	&__closeBtn
+		position: absolute
+		top: -1rem
+		right: -1rem
+	&__title
+		+fontRem(25px)
+		margin-bottom: .8em
+	&__text
+		margin-bottom: .8em
+
+
+
+
+
 
 .error
 	color: #B84747
