--- a/dev/main/blocks/mainScreen/mainScreen.pug
+++ b/dev/main/blocks/mainScreen/mainScreen.pug
@@ -1,7 +1,7 @@
-.mainScreen
+.mainScreen#home
 	.wrapper
-		h1.mainScreen__title CREATIVE 
-			span AND PROFESSIONAL
+		h1.mainScreen__title.foo CREATIVE 
+			span.foo AND PROFESSIONAL
 		p.mainScreen__promo.text Use, by you or one client, in a single end product which end users are not charged for. Use, by you or one client, in a single end product which end users are not charged for.
 
 		+button({
