--- a/dev/main/blocks/purchaseBlock/_purchaseBlock.sass
+++ b/dev/main/blocks/purchaseBlock/_purchaseBlock.sass
@@ -22,13 +22,15 @@
 	&__list
 		margin-bottom: 2em
 	+sm-block
-		&__img
+		&__imgWrap
 			width: 50%
-			font-size: .6rem
 			position: absolute
 			top: 109px
 			right: 0
 			z-index: 1
+		&__img
+			width: 100%
+			font-size: .6rem
 			+lg-block
 				font-size: .94rem
 			&::after
