--- a/dev/main/blocks/purchaseBlock/purchaseBlock.pug
+++ b/dev/main/blocks/purchaseBlock/purchaseBlock.pug
@@ -24,4 +24,7 @@
 				+button({
 						"text": "Purchase"
 					})(class = "purchase__btn btn_color_main btn_size_xs btn_textTransform")
-			.purchase__img
+			.purchase__imgWrap(data-aos="fade-right"
+     data-aos-offset="400"
+     data-aos-duration="500")
+				.purchase__img
