--- a/dev/main/main.pug
+++ b/dev/main/main.pug
@@ -19,7 +19,7 @@ html(lang="en")
 		link(rel="stylesheet" type="text/css" href="static/libs/slick/slick-theme.css")
 		link(rel="stylesheet" type='text/css' href="main/css/perfetto.css")
 		link(rel="stylesheet" type='text/css' href="main/css/main.css")
-		link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css")
+		link(href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet")
 		
 		title
 			block title
@@ -33,8 +33,9 @@ html(lang="en")
 		script(src="static/js/jquery.js")
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js')
 		script(src="static/js/libs.min.js")
-		script(src="static/js/pixelLayout.js") 
-		script(src="http://pixlayout.polycreative.ru/js/jquery.pixlayout.0.9.8.js")
+		script(src="static/libs/wow.min.js")
+		script(src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js")
 		script(src="static/js/main.js")
+
 	
 		
