--- a/dev/main/modules/header/header.pug
+++ b/dev/main/modules/header/header.pug
@@ -10,27 +10,27 @@ header.header
 					span.dropdown__line
 				+nav([
 				{
-				"href": "#",
+				"href": "#home",
 				"text": "Home"
 				},
 				{
-				"href": "#",
+				"href": "#service",
 				"text": "Service"
 				},
 				{
-				"href": "#",
+				"href": "#about",
 				"text": "About"
 				},
 				{
-				"href": "#",
+				"href": "#portfolio",
 				"text": "Portfolio"
 				},
 				{
-				"href": "#",
-				"text": "Page"
+				"href": "#plans",
+				"text": "Plans"
 				},
 				{
-				"href": "#",
+				"href": "#contact",
 				"text": "Contact"
 				}
 				])(class = "header__nav")
