--- a/dev/main/modules/title/_title.sass
+++ b/dev/main/modules/title/_title.sass
@@ -11,6 +11,7 @@
 	&__main
 			width: 100%
 			+fontEm(30px)
+			letter-spacing: -1px
 			font-family: $fontTitle
 			color: $textColorBlack
 			&_pos_absolute
@@ -28,4 +29,3 @@
 #yourElement
   animation-duration: 3s
   animation-delay: 2s
-  animation-iteration-count: infinite
