--- a/dev/main/blocks/gallery/__portfolioItem/_portfolioItem.sass
+++ b/dev/main/blocks/gallery/__portfolioItem/_portfolioItem.sass
@@ -1,21 +1,33 @@
 .portfolioItem
-  width: 40%
+  width: 90%
+  box-sizing: border-box
+  font-size: .5rem
   margin: 0 auto
   position: relative
-  +paddingRem(30px, 30px, 30px, 30px)
+  +paddingEm(30px, 30px, 30px, 30px)
   border: 2px solid $mainColor
   background-color: #fff
+  +xs-block
+    width: 70%
+    font-size: .7rem
+  +sm-block
+    width: 50%
+    font-size: 1rem
+  +lg-block
+    width: 50%
+    font-size: 1.3rem
   &__title
-    +marginRem(0, 0, 30px, 0)
+    +marginEm(0, 0, 30px, 0)
   &__slider
     width: 100%
 
 
   &__pic
       width: 100%
-      height: 336px
+      height: 0
+      padding-bottom: 13%
       &_1
-        background: url(../../static/img/content/portfolio/prev1-966w-2x.jpg) center no-repeat
+        background: url(../../static/img/content/portfolio/prev1-966w-2x.jpg) center bottom no-repeat
         background-size: cover
       &_2
         background: url(../../static/img/content/portfolio/prev2-966w-2x.jpg) center no-repeat
@@ -53,25 +65,9 @@
     text-align: center
     color: $textColorBlack
   &__close
-    width: 2.75rem
-    height: 2.75rem
-    border: 1px solid #fff
     position: absolute
     top: -1rem
     right: -1rem
-    border-radius: 100%
-    background-color: $mainColor
-    &::before
-      content: "X"
-      display: block
-      +fontRem(20px)
-      position: absolute
-      top: 50%
-      left: 50%
-      transform: translate(-50%, -50%)
-      color: #fff
-
-
 .slick-dots li button:before
   +fontRem(40px)
   color: $textColor
