--- a/dev/main/blocks/gallery/_gallery.sass
+++ b/dev/main/blocks/gallery/_gallery.sass
@@ -1,17 +1,32 @@
 .portfolio
-  &__prev
+  +paddingRem(64px, 0, 65px, 0)
+  text-align: center
+  +xs-block
+		padding-bottom: 5.03rem
+  +sm-block
+    padding-top: 5.25rem
+  &__wrapper
+    max-width: 1366px
+    margin: 0 auto
     display: flex
     flex-wrap: wrap
+    justify-content: center
+  &__prevItem
+    flex: 1 320px
+    max-width: 320px
+    height: 250px
+    box-sizing: border-box
+    display: none
+    +sm-block
+      flex: 1 320px
+      height: 310px
+  &__prevBtn
+    margin-top: 1.5rem
 .portfolioPrev
-  flex: 1 250px
-  height: 250px
-  box-sizing: border-box
+  width: 100%
+  height: 100%
   position: relative
   overflow: hidden
-  +sm-block
-    flex: 1 320px
-    height: 310px
-
   &_travel
     background: url(../../static/img/content/portfolio/prev1-483w.jpg) bottom center no-repeat
     background-size: cover
@@ -45,7 +60,8 @@
     position: absolute
     bottom: 0
 
-
+  &__title
+    display: inline-block
   &__name
     margin-left: 1.154em
     text-transform: uppercase
