--- a/dev/main/modules/preloader/_preloader.sass
+++ b/dev/main/modules/preloader/_preloader.sass
@@ -5,7 +5,7 @@
 	top: 0
 	bottom: 0
 	z-index: 1000
-	background-color: #000
+	background-color: $mainColor
 	transition: all 1s
 	opacity: 1
 	visibility: visible
@@ -17,36 +17,38 @@
 	top: 50%
 	left: 50%
 	transform: translate(-50%, -50%)
-	
-.circle
-	width: 75px
-	height: 75px
-	border: 10px solid #fff
-	border-radius: 50%
-	border-top-color: #000
-	animation: spin 1s infinite
-.orbit
-	width: 160px
-	height: 160px
-	border-radius: 50%
-	border: 1px solid #fff
-	position: absolute
-	top: 50%
-	left: 50%
-	margin-top: -80px
-	margin-left: -80px
-	animation: spin 2s infinite reverse
 
-.square
-	width: 30px
-	height: 30px
-	position: absolute
-	top: -10px
-	background-color: #EFF2F6
-	border: 1px solid #000
-	animation: spin 1s infinite
+path
+  fill: #f00
+  stroke: #f00
 
+#T1
+  animation: visible 2s ease .2s infinite
 
-@keyframes spin
-	100%
-		transform: rotate(360deg)
+#T2
+  animation: visible 2s ease .4s infinite
+
+#T3
+  animation: visible 2s ease .6s infinite
+
+#T4
+  animation: visible 2s ease .8s infinite
+
+#T5
+  animation: visible 2s ease 1s infinite
+
+#T6
+  animation: visible 2s ease 1.2s infinite
+
+@keyframes visible
+  0%
+    opacity: 1
+    stroke-opacity: 1
+
+  50%
+    opacity: 0
+    stroke-opacity: 0
+
+  100%
+    opacity: 1
+    stroke-opacity: 1
