--- a/dev/main/sass/_common_styles.sass
+++ b/dev/main/sass/_common_styles.sass
@@ -30,7 +30,22 @@
 	color: $textColorBlack
 	&_size_smaller
 		+fontEm(16px)
-
+.closeBtn
+	width: 2.75rem
+	height: 2.75rem
+	border: 1px solid #fff
+	border-radius: 100%
+	background-color: $mainColor
+	&::before
+		content: "X"
+		display: block
+		+fontRem(20px)
+		font-family: $fontTitle
+		position: absolute
+		top: 50%
+		left: 50%
+		transform: translate(-50%, -50%)
+		color: #fff
 .icon
 	width: 100%
 	height: 100%
