--- a/dev/main/modules/menu/_menu.sass
+++ b/dev/main/modules/menu/_menu.sass
@@ -7,7 +7,7 @@
     font-family: $fontLight
     text-transform: uppercase
     color: $textColorLight
-    +sm-block
+    +md-block
       +fontEm(14px)
       transition: .5s ease-in-out
       &:hover
