--- a/dev/main/css/main.css
+++ b/dev/main/css/main.css
@@ -1269,7 +1269,10 @@ img.mfp-img {
   .social__link {
     display: block;
     width: 19px;
-    height: 19px; }
+    height: 19px;
+    transition: all .5s ease; }
+    .social__link:hover {
+      transform: scale(1.1); }
 
 .nav {
   display: -ms-flexbox;
@@ -1281,7 +1284,7 @@ img.mfp-img {
     font-family: Montserrat-Light, Arial, sans-serif;
     text-transform: uppercase;
     color: #fff; }
-    @media screen and (min-width: 780px) {
+    @media screen and (min-width: 960px) {
       .nav__link {
         font-size: 0.875em;
         transition: .5s ease-in-out; }
@@ -1313,10 +1316,10 @@ img.mfp-img {
     bottom: 0;
     z-index: 3000;
     line-height: 1; }
-    @media screen and (min-width: 780px) {
+    @media screen and (min-width: 960px) {
       .header__navPanel {
         width: calc(75% - 30px); } }
-    @media screen and (min-width: 780px) {
+    @media screen and (min-width: 960px) {
       .header__navPanel {
         position: static;
         line-height: inherit;
@@ -1345,7 +1348,7 @@ img.mfp-img {
       opacity: 1; }
       .header__nav_active .nav__link {
         display: inline-block; }
-    @media screen and (min-width: 780px) {
+    @media screen and (min-width: 960px) {
       .header__nav {
         width: 100%;
         height: 100%;
@@ -1364,7 +1367,7 @@ img.mfp-img {
 .dropdown {
   margin: 0 auto;
   text-align: center; }
-  @media screen and (min-width: 780px) {
+  @media screen and (min-width: 960px) {
     .dropdown {
       display: none; } }
   .dropdown__btn {
@@ -1383,6 +1386,7 @@ img.mfp-img {
     z-index: -1;
     border-radius: 50%;
     background-color: #ffe400;
+    box-shadow: 0px 0px 10px #fff;
     transition: transform 0.3s cubic-bezier(0.04, -0.1, 0.29, 0.98), width 0.3s cubic-bezier(0.04, -0.1, 0.29, 0.98), height 0.3s cubic-bezier(0.04, -0.1, 0.29, 0.98); }
   .dropdown__label, .dropdown__label::before, .dropdown__label::after {
     display: inline-block;
@@ -1417,19 +1421,18 @@ img.mfp-img {
       transform: rotate(135deg); }
 
 .btn {
+  position: relative;
   font-size: 1.125em;
   min-width: 12.61em;
-  min-height: 3.33em;
-  padding: 1em;
+  padding: 1.2em 1em;
   font-family: Montserrat-Bold, Arial, sans-serif;
   text-align: center;
-  vertical-align: middle;
   border: 0 solid;
   outline: 0 solid;
   outline-color: rgba(0, 0, 0, 0.5);
   outline-offset: 0px;
   transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1); }
-  .btn:hover {
+  .btn:hover:enabled {
     border: 1px solid;
     outline: 1px solid;
     outline-color: transparent;
@@ -1447,11 +1450,31 @@ img.mfp-img {
     text-transform: uppercase; }
   .btn_size_s {
     min-width: 10em;
-    min-height: 3.11em; }
+    padding: 1em; }
   .btn_size_xs {
     font-size: 0.75em;
-    min-width: 10.58em;
-    min-height: 3.33em; }
+    min-width: 10.58em; }
+  .btn__icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: .5em;
+    box-sizing: border-box;
+    background-color: inherit;
+    display: none; }
+    .btn__icon .icon {
+      fill: #fff;
+      animation: rotate .7s infinite linear; }
+  .btn:disabled .btn__icon {
+    display: block; }
+
+@keyframes rotate {
+  from {
+    transform: rotate(0); }
+  to {
+    transform: rotate(360deg); } }
 
 .title {
   position: relative;
@@ -2118,11 +2141,11 @@ img.mfp-img {
   background-color: #fff; }
   @media screen and (min-width: 560px) {
     .portfolioItem {
-      width: 70%;
+      width: 80%;
       font-size: .7rem; } }
   @media screen and (min-width: 780px) {
     .portfolioItem {
-      width: 50%;
+      width: 60%;
       font-size: 1rem; } }
   @media screen and (min-width: 1100px) {
     .portfolioItem {
@@ -2461,118 +2484,109 @@ img.mfp-img {
   .team__members {
     -ms-flex-pack: center;
         justify-content: center; }
-  .team__member {
+  .team__memberWrap {
     box-sizing: border-box;
     word-wrap: break-word;
     margin-left: 15px;
     margin-right: 15px;
     width: calc(100% - 30px);
     max-width: 320px;
+    height: 494px;
     margin-bottom: 30px; }
     @media screen and (min-width: 560px) {
-      .team__member {
+      .team__memberWrap {
         width: calc(50% - 30px); } }
     @media screen and (min-width: 780px) {
-      .team__member {
+      .team__memberWrap {
         width: calc(50% - 30px); } }
     @media screen and (min-width: 960px) {
-      .team__member {
+      .team__memberWrap {
         width: calc(33.33333% - 30px); } }
-
-.member {
-  position: relative;
-  overflow: hidden; }
-  .member__mainInfo {
-    position: relative; }
-    .member__mainInfo::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      transform: translate(-100%, -50%);
-      border: 7em solid transparent;
-      border-left: 8em solid red; }
-  .member__mainInfo:hover::before {
-    animation: translate 3s ease-in; }
-  .member__mainInfo:hover .member__details {
-    animation-name: opacity;
-    animation-delay: 2.5s; }
-  .member__info {
-    padding: 0 1.5em 0 1.5em;
-    background-color: #ebebeb; }
-  .member__infoItem {
-    display: block;
-    padding: 1.375rem 0 1.375rem 0;
-    text-align: center; }
-  .member__infoItem:not(:last-child) {
-    border-bottom: 1px dashed #b7b7b7; }
-  .member__position {
-    font-size: 0.6875em; }
-  .member__img {
-    display: block;
-    margin-bottom: 8px; }
-  .member img {
+    .team__memberWrap:hover .member {
+      transform: rotateX(90deg); }
+  .team__member {
     width: 100%;
-    height: auto; }
-  .member__details {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: column;
-        flex-direction: column;
-    width: 100%;
-    box-sizing: border-box;
-    padding: 4em 1.5em 0 1.5em;
-    font-size: .9rem;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    text-align: center;
-    background-color: #ffe400;
-    color: #000;
-    transform: translateX(100%); }
-    @media screen and (min-width: 560px) {
-      .member__details {
-        font-size: 1rem; } }
-    @media screen and (min-width: 780px) {
-      .member__details {
-        padding-top: 6em; } }
-  .member__detailsName, .member__detailsPos {
-    margin-bottom: 0.71em;
-    font-family: Montserrat-Bold, Arial, sans-serif;
-    font-size: 1.5em;
-    font-weight: bold;
-    text-transform: uppercase; }
-  .member__detailsPos {
-    font-size: 1em; }
-  .member__detailsText {
-    margin: auto;
-    padding: 0 0.875em;
-    font-family: Muli, Arial, sans-serif;
-    line-height: 1.75;
-    font-size: 0.875em; }
-  .member__detailsSocial {
-    padding: 2.5rem 2% 3.125rem;
-    border-top: 1px dashed #b7b7b7; }
-  .member__socialLink {
-    fill: rgba(0, 0, 0, 0.5); }
+    height: 100%;
+    position: relative;
+    transform-origin: 50% 50%;
+    transform-style: preserve-3d;
+    transition: .4s all; }
+    .team__member .member {
+      width: 100%;
+      height: 100%;
+      transform: rotateX(0deg) translate3d(0px, 0px, 247px); }
+      .team__member .member__mainInfo {
+        position: absolute; }
+      .team__member .member__details {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transform: rotateX(-90deg) translate3d(0px, 0px, 247px); }
 
-.member:hover .member__mainInfo::before {
-  animation: translate 3s; }
+.member__text {
+  padding: 0 1.5em 0 1.5em;
+  background-color: #ebebeb; }
 
-.member:hover .member__details {
-  animation: translate2 2s 1s; }
+.member__infoItem {
+  display: block;
+  padding: 1.375rem 0 1.375rem 0;
+  text-align: center; }
 
-@keyframes translate {
-  0%, 100% {
-    transform: translate(-100%, -50%); }
-  60% {
-    transform: translate(0, -50%); } }
+.member__infoItem:not(:last-child) {
+  border-bottom: 1px dashed #b7b7b7; }
 
-@keyframes translate2 {
-  0% {
-    transform: translateX(100%); }
-  100% {
-    transform: translateX(0); } }
+.member__position {
+  font-size: 0.6875em; }
+
+.member__img {
+  display: block;
+  margin-bottom: 8px; }
+
+.member img {
+  width: 100%;
+  height: auto; }
+
+.member__details {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  padding: 4em 1.5em 0 1.5em;
+  box-sizing: border-box;
+  font-size: .9rem;
+  text-align: center;
+  background-color: #ffe400;
+  color: #000; }
+  @media screen and (min-width: 560px) {
+    .member__details {
+      font-size: 1rem; } }
+  @media screen and (min-width: 780px) {
+    .member__details {
+      padding-top: 6em; } }
+
+.member__detailsName, .member__detailsPos {
+  margin-bottom: 0.71em;
+  font-family: Montserrat-Bold, Arial, sans-serif;
+  font-size: 1.5em;
+  font-weight: bold;
+  text-transform: uppercase; }
+
+.member__detailsPos {
+  font-size: 1em; }
+
+.member__detailsText {
+  margin: auto;
+  padding: 0 0.875em;
+  font-family: Muli, Arial, sans-serif;
+  line-height: 1.75;
+  font-size: 0.875em; }
+
+.member__detailsSocial {
+  padding: 2.5rem 2% 3.125rem;
+  border-top: 1px dashed #b7b7b7; }
+
+.member__socialLink {
+  fill: rgba(0, 0, 0, 0.5); }
 
 .contactBlock {
   padding: 7.5rem 0 8.125rem 0;
@@ -2617,25 +2631,28 @@ img.mfp-img {
   @media screen and (min-width: 780px) {
     .form__field {
       width: calc(50% - 30px); } }
-  .form__field_textarea {
-    box-sizing: border-box;
-    word-wrap: break-word;
-    margin-left: 15px;
-    margin-right: 15px;
-    width: calc(100% - 30px);
-    margin-bottom: 1.1rem; }
 
-.form__input {
-  display: inline-block;
-  width: 100%; }
+.form__fieldTextarea {
+  position: relative;
+  box-sizing: border-box;
+  word-wrap: break-word;
+  margin-left: 15px;
+  margin-right: 15px;
+  width: calc(100% - 30px);
+  min-height: 18rem;
+  margin-bottom: 1.1rem; }
 
 .form__textarea {
   width: 100%;
-  min-height: 18rem;
+  height: 100%;
   overflow: auto; }
   @media screen and (min-width: 780px) {
     .form__textarea {
       min-height: 31.8125rem; } }
+
+.form__input {
+  display: inline-block;
+  width: 100%; }
 
 .form__input, .form__textarea {
   padding: 1.4375rem 0 1.3125rem 1.25rem;
