--- a/dev/main/modules/button/_button.sass
+++ b/dev/main/modules/button/_button.sass
@@ -1,19 +1,16 @@
 .btn
-	// min-width: 227px
-	// min-height: 60px
+	position: relative
 	+fontEm(18px)
 	min-width: 12.61em
-	min-height: 3.33em
-	padding: 1em
+	padding: 1.2em 1em
 	font-family: $fontTitle
 	text-align: center
-	vertical-align: middle
 	border: 0 solid
 	outline: 0 solid
 	outline-color: rgba(0, 0, 0, .5)
 	outline-offset: 0px
 	transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1)
-	&:hover
+	&:hover:enabled
 		border: 1px solid
 		outline: 1px solid
 		outline-color: rgba(0, 0, 0, 0)
@@ -33,13 +30,30 @@
 		text-transform: uppercase
 	&_size
 		&_s
-			// min-width: 180px
-			// min-height: 56px
 			min-width: 10em
-			min-height: 3.11em
+			padding: 1em
 		&_xs
-			// min-width: 127px
-			// min-height: 40px
 			+fontEm(12px)
 			min-width: 10.58em
-			min-height: 3.33em
+	&__icon
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		padding: .5em
+		box-sizing: border-box
+		background-color: inherit
+		display: none
+		.icon
+			fill: $textColorLight
+			animation: rotate .7s infinite linear
+	&:disabled &__icon
+		display: block
+
+
+	@keyframes rotate
+		from
+			transform: rotate(0)
+		to
+			transform: rotate(360deg)
