--- a/dev/main/modules/header/_header.sass
+++ b/dev/main/modules/header/_header.sass
@@ -11,13 +11,13 @@
   &__navPanel
     +col
     +size(12)
-    +size-sm(9)
+    +size-md(9)
     position: fixed
     left: 0
     bottom: 0
     z-index: 3000
     line-height: 1
-    +sm-block
+    +md-block
       position: static
       line-height: inherit
       +paddingRem(0, 38px, 0, 38px)
@@ -43,7 +43,7 @@
       opacity: 1
       .nav__link
         display: inline-block
-    +sm-block
+    +md-block
       width: 100%
       height: 100%
       position: static
@@ -58,7 +58,7 @@
 .dropdown
   margin: 0 auto
   text-align: center
-  +sm-block
+  +md-block
     display: none
   &__btn
     width: 36px
@@ -76,6 +76,7 @@
     z-index: -1
     border-radius: 50%
     background-color: $mainColor
+    box-shadow: 0px 0px 10px $textColorLight
     transition: transform .3s cubic-bezier(0.04, -0.1, 0.29, 0.98), width .3s cubic-bezier(0.04, -0.1, 0.29, 0.98), height .3s cubic-bezier(0.04, -0.1, 0.29, 0.98)
 
   &__label
