--- a/dev/main/sass/_common_styles.sass
+++ b/dev/main/sass/_common_styles.sass
@@ -60,3 +60,8 @@
 		display: block
 		width: 19px
 		height: 19px
+		transition: all .5s ease
+		&:hover
+			transform: scale(1.1)
+	// 	box-shadow: 0 0 15px #3b5998
+	// 	transition: all .5s ease
