--- a/dev/main/blocks/form/_form.sass
+++ b/dev/main/blocks/form/_form.sass
@@ -66,7 +66,12 @@
 		left: 0
 		right: 0
 		background: rgba(0, 0, 0, .3)
-		display: none
+		opacity: 0
+		visibility: hidden
+		transition: all .5s
+		&_visible
+			opacity: 1
+			visibility: visible
 	&__icon
 		display: inline-block
 		width: 2em
