--- a/dev/main/blocks/gallery/__portfolioItem/_portfolioItem.sass
+++ b/dev/main/blocks/gallery/__portfolioItem/_portfolioItem.sass
@@ -2,8 +2,8 @@
   width: 90%
   box-sizing: border-box
   font-size: .5rem
-  margin: 0 auto
-  position: relative
+  //margin: 0 auto
+  //position: relative
   +paddingEm(30px, 30px, 30px, 30px)
   border: 2px solid $mainColor
   background-color: #fff
