--- a/dev/main/blocks/gallery/_gallery.sass
+++ b/dev/main/blocks/gallery/_gallery.sass
@@ -1,6 +1,7 @@
 .portfolio
   +paddingRem(64px, 0, 65px, 0)
   text-align: center
+  position: relative
   +xs-block
 		padding-bottom: 5.03rem
   +sm-block
@@ -22,6 +23,14 @@
       height: 310px
   &__prevBtn
     margin-top: 1.5rem
+
+  &__slideItem
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    z-index: 3000
+    display: none
 .portfolioPrev
   width: 100%
   height: 100%
