--- a/dev/main/main.pug
+++ b/dev/main/main.pug
@@ -32,7 +32,7 @@ html(lang="en")
 		script(src="static/libs/validate/jquery.validate.min.js")
 		script(src="static/libs/magnific/jquery.magnific-popup.min.js")
 		script(src="static/libs/slick/slick.min.js")
-		script(src="static/js/main.js")
+		script(src="static/js/mainMy.js")
 		<!-- endbuild-->
 		script AOS.init({disable: 'mobile'})
 		
